Details
-
Bug
-
Resolution: Done
-
P2: Important
-
5.8.0, 5.9.0 Beta 1
-
None
-
macOS
-
0c9e2eae483dc777b9f53819d23805abc80e51d8
Description
Steps to reproduce
1) Open demobrowser
2) Open new window with shortcut Ctrl +N
3) Close tab of new window with shortcut Ctrl + W
4) Observe crash.
Stack trace:
1 QScopedPointer<QObjectData, QScopedPointerDeleter<QObjectData>>::data() const qscopedpointer.h 140 0x11d9bf10c 2 QScopedPointer<QObjectData, QScopedPointerDeleter<QObjectData>>::pointer qGetPtrHelper<QScopedPointer<QObjectData, QScopedPointerDeleter<QObjectData>>>(QScopedPointer<QObjectData, QScopedPointerDeleter<QObjectData>> const&) qglobal.h 961 0x11d9d4065 3 QWidget::d_func() qwidget.h 131 0x11d9d5679 4 QWidget::~QWidget() qwidget.cpp 1598 0x11da1bc83 5 QWidget::~QWidget() qwidget.cpp 1556 0x11da1ca15 6 QWidget::~QWidget() qwidget.cpp 1556 0x11da1ca59 7 QObjectPrivate::deleteChildren() qobject.cpp 1970 0x1204bf8a6 8 QWidget::~QWidget() qwidget.cpp 1694 0x11da1c122 9 QFrame::~QFrame() qframe.cpp 264 0x11db96ea5 10 QStackedWidget::~QStackedWidget() qstackedwidget.cpp 149 0x11dc27265 11 QStackedWidget::~QStackedWidget() qstackedwidget.cpp 148 0x11dc27285 12 QStackedWidget::~QStackedWidget() qstackedwidget.cpp 148 0x11dc272c9 13 QObjectPrivate::deleteChildren() qobject.cpp 1970 0x1204bf8a6 14 QWidget::~QWidget() qwidget.cpp 1694 0x11da1c122 15 QTabWidget::~QTabWidget() qtabwidget.cpp 363 0x11dc39035 16 TabWidget::~TabWidget() tabwidget.cpp 104 0x100044514 17 TabWidget::~TabWidget() tabwidget.cpp 101 0x100044535 18 TabWidget::~TabWidget() tabwidget.cpp 101 0x100044579 19 QObjectPrivate::deleteChildren() qobject.cpp 1970 0x1204bf8a6 20 QWidget::~QWidget() qwidget.cpp 1694 0x11da1c122 21 QWidget::~QWidget() qwidget.cpp 1556 0x11da1ca15 22 QWidget::~QWidget() qwidget.cpp 1556 0x11da1ca59 23 QObjectPrivate::deleteChildren() qobject.cpp 1970 0x1204bf8a6 24 QWidget::~QWidget() qwidget.cpp 1694 0x11da1c122 25 QMainWindow::~QMainWindow() qmainwindow.cpp 410 0x11dbb9e95 26 BrowserMainWindow::~BrowserMainWindow() browsermainwindow.cpp 191 0x100017f9d 27 BrowserMainWindow::~BrowserMainWindow() browsermainwindow.cpp 188 0x100017fc5 28 BrowserMainWindow::~BrowserMainWindow() browsermainwindow.cpp 188 0x100018009 29 qDeleteInEventHandler(QObject *) qobject.cpp 4552 0x1204c049b 30 QObject::event(QEvent *) qobject.cpp 1254 0x1204c0031 31 QWidget::event(QEvent *) qwidget.cpp 9220 0x11da30c9e 32 QMainWindow::event(QEvent *) qmainwindow.cpp 1557 0x11dbbc5d0 33 QApplicationPrivate::notify_helper(QObject *, QEvent *) qapplication.cpp 3745 0x11d9cc16f 34 QApplication::notify(QObject *, QEvent *) qapplication.cpp 3708 0x11d9d1491 35 QCoreApplication::notifyInternal2(QObject *, QEvent *) qcoreapplication.cpp 988 0x120473b75 36 QCoreApplication::sendEvent(QObject *, QEvent *) qcoreapplication.h 231 0x120478798 37 QCoreApplicationPrivate::sendPostedEvents(QObject *, int, QThreadData *) qcoreapplication.cpp 1648 0x120474fe8 38 QCoreApplication::sendPostedEvents(QObject *, int) qcoreapplication.cpp 1502 0x12047448f 39 QQuickRenderControlPrivate::windowDestroyed() qquickrendercontrol.cpp 190 0x11d1015a1 40 QQuickRenderControl::~QQuickRenderControl() qquickrendercontrol.cpp 181 0x11d101494 41 QQuickWidgetRenderControl::~QQuickWidgetRenderControl() qquickwidget.cpp 83 0x120d14215 42 QQuickWidgetRenderControl::~QQuickWidgetRenderControl() qquickwidget.cpp 83 0x120d14135 43 QQuickWidgetRenderControl::~QQuickWidgetRenderControl() qquickwidget.cpp 83 0x120d14159 44 QQuickWidgetPrivate::~QQuickWidgetPrivate() qquickwidget.cpp 212 0x120d0d9e7 45 QQuickWidgetPrivate::~QQuickWidgetPrivate() qquickwidget.cpp 202 0x120d0db25 46 QQuickWidgetPrivate::~QQuickWidgetPrivate() qquickwidget.cpp 202 0x120d0db69 47 QScopedPointerDeleter<QObjectData>::cleanup(QObjectData *) qscopedpointer.h 60 0x1204d049b 48 QScopedPointer<QObjectData, QScopedPointerDeleter<QObjectData>>::~QScopedPointer() qscopedpointer.h 107 0x1204d0458 49 QScopedPointer<QObjectData, QScopedPointerDeleter<QObjectData>>::~QScopedPointer() qscopedpointer.h 105 0x1204cc895 50 QObject::~QObject() qobject.cpp 1049 0x1204bf738 51 QWidget::~QWidget() qwidget.cpp 1714 0x11da1c1e6 52 QQuickWidget::~QQuickWidget() qquickwidget.cpp 537 0x120d0ec0d 53 QtWebEngineCore::RenderWidgetHostViewQtDelegateWidget::~RenderWidgetHostViewQtDelegateWidget() render_widget_host_view_qt_delegate_widget.h 51 0x10031a529 54 QtWebEngineCore::RenderWidgetHostViewQtDelegateWidget::~RenderWidgetHostViewQtDelegateWidget() render_widget_host_view_qt_delegate_widget.h 51 0x10031a3f5 55 QtWebEngineCore::RenderWidgetHostViewQtDelegateWidget::~RenderWidgetHostViewQtDelegateWidget() render_widget_host_view_qt_delegate_widget.h 51 0x10031a419 56 std::default_delete<QtWebEngineCore::RenderWidgetHostViewQtDelegate>::operator()(QtWebEngineCore::RenderWidgetHostViewQtDelegate *) const memory 2516 0x10044ed6c 57 std::unique_ptr<QtWebEngineCore::RenderWidgetHostViewQtDelegate, std::default_delete<QtWebEngineCore::RenderWidgetHostViewQtDelegate>>::reset(QtWebEngineCore::RenderWidgetHostViewQtDelegate *) memory 2715 0x10044ed47 58 std::unique_ptr<QtWebEngineCore::RenderWidgetHostViewQtDelegate, std::default_delete<QtWebEngineCore::RenderWidgetHostViewQtDelegate>>::~unique_ptr() memory 2683 0x10044ece4 59 std::unique_ptr<QtWebEngineCore::RenderWidgetHostViewQtDelegate, std::default_delete<QtWebEngineCore::RenderWidgetHostViewQtDelegate>>::~unique_ptr() memory 2683 0x10044ecd4 60 QtWebEngineCore::RenderWidgetHostViewQt::~RenderWidgetHostViewQt() render_widget_host_view_qt.cpp 261 0x10044eccc 61 QtWebEngineCore::RenderWidgetHostViewQt::~RenderWidgetHostViewQt() render_widget_host_view_qt.cpp 256 0x10044ee25 62 QtWebEngineCore::RenderWidgetHostViewQt::~RenderWidgetHostViewQt() render_widget_host_view_qt.cpp 256 0x10044eec9 63 QtWebEngineCore::RenderWidgetHostViewQt::Destroy() render_widget_host_view_qt.cpp 604 0x10045077b 64 content::RenderWidgetHostImpl::Destroy(bool) render_widget_host_impl.cc 1435 0x101ccafb5 65 content::RenderWidgetHostImpl::ShutdownAndDestroyWidget(bool) render_widget_host_impl.cc 432 0x101ccd703 66 content::RenderViewHostImpl::ShutdownAndDestroy() render_view_host_impl.cc 885 0x101cb9239 67 content::FrameTree::ReleaseRenderViewHostRef(content::RenderViewHostImpl *) frame_tree.cc 353 0x10156091b 68 content::RenderFrameHostImpl::~RenderFrameHostImpl() render_frame_host_impl.cc 338 0x1015cc12d 69 content::RenderFrameHostImpl::~RenderFrameHostImpl() render_frame_host_impl.cc 296 0x1015cd0e5 70 content::RenderFrameHostImpl::~RenderFrameHostImpl() render_frame_host_impl.cc 296 0x1015cd169 71 std::default_delete<content::RenderFrameHostImpl>::operator()(content::RenderFrameHostImpl *) const memory 2516 0x101614b2a 72 std::unique_ptr<content::RenderFrameHostImpl, std::default_delete<content::RenderFrameHostImpl>>::reset(content::RenderFrameHostImpl *) memory 2715 0x101614b02 73 std::unique_ptr<content::RenderFrameHostImpl, std::default_delete<content::RenderFrameHostImpl>>::~unique_ptr() memory 2683 0x101614a69 74 std::unique_ptr<content::RenderFrameHostImpl, std::default_delete<content::RenderFrameHostImpl>>::~unique_ptr() memory 2683 0x101614a50 75 content::RenderFrameHostManager::~RenderFrameHostManager() render_frame_host_manager.cc 83 0x101614a42 76 content::RenderFrameHostManager::~RenderFrameHostManager() render_frame_host_manager.cc 68 0x1016160b5 77 content::FrameTreeNode::~FrameTreeNode() frame_tree_node.cc 131 0x101569603 78 content::FrameTreeNode::~FrameTreeNode() frame_tree_node.cc 122 0x101569695 79 content::FrameTree::~FrameTree() frame_tree.cc 113 0x10155ddff 80 content::FrameTree::~FrameTree() frame_tree.cc 112 0x10155de55 81 content::WebContentsImpl::~WebContentsImpl() web_contents_impl.cc 523 0x10202924e 82 content::WebContentsImpl::~WebContentsImpl() web_contents_impl.cc 436 0x102029585 83 content::WebContentsImpl::~WebContentsImpl() web_contents_impl.cc 436 0x1020296a9 84 std::default_delete<content::WebContents>::operator()(content::WebContents *) const memory 2516 0x1004b2b51 85 std::unique_ptr<content::WebContents, std::default_delete<content::WebContents>>::reset(content::WebContents *) memory 2715 0x1004b2b29 86 QtWebEngineCore::WebContentsAdapterPrivate::~WebContentsAdapterPrivate() web_contents_adapter.cpp 348 0x1004b2a89 87 QtWebEngineCore::WebContentsAdapterPrivate::~WebContentsAdapterPrivate() web_contents_adapter.cpp 346 0x1004b3095 88 QScopedPointerDeleter<QtWebEngineCore::WebContentsAdapterPrivate>::cleanup(QtWebEngineCore::WebContentsAdapterPrivate *) qscopedpointer.h 60 0x1004c5007 89 QScopedPointer<QtWebEngineCore::WebContentsAdapterPrivate, QScopedPointerDeleter<QtWebEngineCore::WebContentsAdapterPrivate>>::~QScopedPointer() qscopedpointer.h 107 0x1004c4fd0 90 QScopedPointer<QtWebEngineCore::WebContentsAdapterPrivate, QScopedPointerDeleter<QtWebEngineCore::WebContentsAdapterPrivate>>::~QScopedPointer() qscopedpointer.h 105 0x1004bdbd5 91 QtWebEngineCore::WebContentsAdapter::~WebContentsAdapter() web_contents_adapter.cpp 389 0x1004b4b13 92 QtWebEngineCore::WebContentsAdapter::~WebContentsAdapter() web_contents_adapter.cpp 388 0x1004b4b45 93 QtSharedPointer::ExternalRefCountWithContiguousData<QtWebEngineCore::WebContentsAdapter>::deleter(QtSharedPointer::ExternalRefCountData *) qsharedpointer_impl.h 255 0x1003056a1 94 QtSharedPointer::ExternalRefCountData::destroy() qsharedpointer_impl.h 157 0x1003061ab 95 QSharedPointer<QtWebEngineCore::WebContentsAdapter>::deref(QtSharedPointer::ExternalRefCountData *) qsharedpointer_impl.h 458 0x100305d8d 96 QSharedPointer<QtWebEngineCore::WebContentsAdapter>::deref() qsharedpointer_impl.h 453 0x1003061f9 97 QSharedPointer<QtWebEngineCore::WebContentsAdapter>::~QSharedPointer() qsharedpointer_impl.h 312 0x1003061d5 98 QSharedPointer<QtWebEngineCore::WebContentsAdapter>::~QSharedPointer() qsharedpointer_impl.h 312 0x100301895 99 QWebEnginePagePrivate::~QWebEnginePagePrivate() qwebenginepage.cpp 241 0x1002f7022 100 QWebEnginePagePrivate::~QWebEnginePagePrivate() qwebenginepage.cpp 238 0x1002f7055 101 QWebEnginePagePrivate::~QWebEnginePagePrivate() qwebenginepage.cpp 238 0x1002f7079 102 QScopedPointerDeleter<QWebEnginePagePrivate>::cleanup(QWebEnginePagePrivate *) qscopedpointer.h 60 0x1003065eb 103 QScopedPointer<QWebEnginePagePrivate, QScopedPointerDeleter<QWebEnginePagePrivate>>::~QScopedPointer() qscopedpointer.h 107 0x1003065b0 104 QScopedPointer<QWebEnginePagePrivate, QScopedPointerDeleter<QWebEnginePagePrivate>>::~QScopedPointer() qscopedpointer.h 105 0x100301f35 105 QWebEnginePage::~QWebEnginePage() qwebenginepage.cpp 806 0x1002f94dc 106 WebPage::~WebPage() webview.h 66 0x1000620f5 107 WebPage::~WebPage() webview.h 66 0x100062015 108 WebPage::~WebPage() webview.h 66 0x100062039 109 QObjectPrivate::deleteChildren() qobject.cpp 1970 0x1204bf8a6 110 QWidget::~QWidget() qwidget.cpp 1694 0x11da1c122 111 QWebEngineView::~QWebEngineView() qwebengineview.cpp 156 0x100310bcb 112 WebView::~WebView() webview.h 94 0x10006215b 113 WebView::~WebView() webview.h 94 0x100062065 114 WebView::~WebView() webview.h 94 0x100062089 115 qDeleteInEventHandler(QObject *) qobject.cpp 4552 0x1204c049b 116 QObject::event(QEvent *) qobject.cpp 1254 0x1204c0031 117 QWidget::event(QEvent *) qwidget.cpp 9220 0x11da30c9e 118 QWebEngineView::event(QEvent *) qwebengineview.cpp 316 0x100311290 119 QApplicationPrivate::notify_helper(QObject *, QEvent *) qapplication.cpp 3745 0x11d9cc16f 120 QApplication::notify(QObject *, QEvent *) qapplication.cpp 3708 0x11d9d1491 121 QCoreApplication::notifyInternal2(QObject *, QEvent *) qcoreapplication.cpp 988 0x120473b75 122 QCoreApplication::sendEvent(QObject *, QEvent *) qcoreapplication.h 231 0x120478798 123 QCoreApplicationPrivate::sendPostedEvents(QObject *, int, QThreadData *) qcoreapplication.cpp 1648 0x120474fe8 124 QCoreApplication::sendPostedEvents(QObject *, int) qcoreapplication.cpp 1502 0x12047448f 125 QCocoaEventDispatcherPrivate::processPostedEvents() qcocoaeventdispatcher.mm 888 0x12615147e 126 QCocoaEventDispatcherPrivate::postedEventsSourceCallback(void *) qcocoaeventdispatcher.mm 925 0x126151f4f 127 __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION__ 0x7fff89b1f881 128 __CFRunLoopDoSources0 0x7fff89afefbc 129 __CFRunLoopRun 0x7fff89afe4df 130 CFRunLoopRunSpecific 0x7fff89afded8 131 RunCurrentEventLoopInMode 0x7fff86d83935 132 ReceiveNextEventCommon 0x7fff86d8376f 133 _BlockUntilNextEventMatchingListInModeWithFilter 0x7fff86d835af 134 _DPSNextEvent 0x7fff91828df6 135 -[NSApplication _nextEventMatchingEventMask:untilDate:inMode:dequeue:] 0x7fff91828226 136 -[NSApplication run] 0x7fff9181cd80 137 QCocoaEventDispatcher::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) qcocoaeventdispatcher.mm 421 0x126150256 138 QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) qeventloop.cpp 134 0x12046e8c4 139 QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) qeventloop.cpp 212 0x12046eadb 140 QCoreApplication::exec() qcoreapplication.cpp 1261 0x12047436c 141 QGuiApplication::exec() qguiapplication.cpp 1657 0x11e6a6a76 142 QApplication::exec() qapplication.cpp 2921 0x11d9cd769 143 main main.cpp 64 0x100056f68 144 start 0x1000055c4
Attachments
Issue Links
- relates to
-
QTBUG-63945 QtWebEngine causing crash on exit
-
- Closed
-
-
QTCREATORBUG-19582 Crash when exiting Qt Creator after opening external help windows
-
- Closed
-